--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,13 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  fluttertoast: ^3.1.0
+  fluttertoast: ^8.0.7
+  flutter_launcher_icons: "^0.8.0"
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.jpg"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
